# shelley

./: Cargo.toml  README.md  research.md
src/: ask.rs  cli.rs  client.rs  config.rs  main.rs  model.rs  propose.rs  render.rs  shell.rs  syntax.rs  tools.rs  ui.rs
src/snapshots/: shelley__ui__tests__renders_marker_following_the_cursor.snap  shelley__ui__tests__renders_with_marker_on_first_row.snap
