[package]
name = "shelley"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0.29"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strides = "1.0.0-rc.2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt"] }

[dev-dependencies]
insta = "1"
wiremock = "0.6"
