[package]
name = "shelley"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0.29"
futures-channel = "0.3"
futures-concurrency = "7"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strides = { git = "https://github.com/matze/strides", rev = "70b5d25" }
termimad = "0.34"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "process", "rt"] }
toml = { version = "1", default-features = false, features = ["parse", "serde", "std"] }

[dev-dependencies]
insta = "1"
tempfile = "3"
wiremock = "0.6"
